apply hr-dotted sytle

--- a/_workrecords/2021-07-25-Week-1-S2.md
+++ b/_workrecords/2021-07-25-Week-1-S2.md
@@ -12,30 +12,42 @@ layout: post
   - Consult with Dr. Yu Lin regarding database design
   - Meet with CSIT and discuss technical requirements
 
+<hr class="hr-dotted">
+
 - Tian Wu
 
   - work 1
   - work 2
+
+<hr class="hr-dotted">
 
 - Ruoqian Wu
 
   - work 1
   - work 2
 
+<hr class="hr-dotted">
+
 - Yaoyi Xu
 
   - work 1
   - work 2
+
+<hr class="hr-dotted">
 
 - Hengrui Xu
 
   - work 1
   - work 2
 
+<hr class="hr-dotted">
+
 - Ruiqiao Jiang
 
   - work 1
   - work 2
+
+<hr class="hr-dotted">
 
 - Guoyu Wang
 
