add work records - phillip

--- a/_workrecords/2021-07-25-Week-1-S2.md
+++ b/_workrecords/2021-07-25-Week-1-S2.md
@@ -16,8 +16,11 @@ layout: post
 
 - Tian Wu
 
-  - work 1
-  - work 2
+  - Migrating team's landing page from preivous [Conflunce page](https://techlauncher.atlassian.net/wiki/spaces/TECHLAUNCH/overview) to GitHub pages.
+    - Using `Jekyll` to host our landing webpages on GitHub Pages.
+    - Re-organizing website structures and re-branding the newly hosted website.
+  - Team meetings with teammates to plan out this semester's work.
+  - Picking up JavaScript for later coding assignments for website implementation and optimization.
 
 <hr class="hr-dotted">
 
