--- a/_workrecords/2021-07-25-Week-1-S2.md
+++ b/_workrecords/2021-07-25-Week-1-S2.md
@@ -6,7 +6,7 @@ layout: post
 
 - Wo Tian
 
-  - Host group meeetings and client meetings. Record meeting minutes.
+  - Host group meetings and client meetings. Record meeting minutes.
   - Integrate customers' suggestions for refining the website to a To-do list.
   - Write semester plan.
   - Consult with Dr. Yu Lin regarding database design.
