--- a/_posts/2021-08-06-PCM.md
+++ b/_posts/2021-08-06-PCM.md
@@ -17,7 +17,11 @@ layout: post
 
 [2] [_Personal_] Who is the client? What motivates the client?
 
-- See [our client](#client)
+- Out client:
+  | Name | **ANFF OptoFab ACT** |
+  | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+  | Website | http://optofab-act.org.au |
+  | Contacts | Dr Johannes Eichholz: <johannes.eichholz@anu.edu.au><br>Mr Deon Hickey: <Deon.Hickey@anu.edu.au><br>A/Prof. Steve Madden: <stephen.madden@anu.edu.au><br>Mr Sukanta Debbarma : <debbarma.sukanta@anu.edu.au> |
 - Our client is motivated in freeing themselves from the red tapes dealing with emails, paparwork, and endless phone calls when they process an order from the customer.
 
 <hr class="hr-dotted">
