--- a/_posts/2019-08-24-just-do-it.md
+++ b/_posts/2019-08-24-just-do-it.md
@@ -5,3 +5,7 @@ author: Bill
 Real life is about reacting quickly to the opportunity at hand, not the opportunity you envisioned. Not thinking and scheming for the future, but letting it happen.
 
 So just do it!
+
+<div class="commentbox"></div>
+<script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
+<script>commentBox('5693275310653440-proj')</script>
