--- a/404.md
+++ b/404.md
@@ -3,7 +3,9 @@ layout: default
 permalink: /404.html
 ---
 
-<div class="fof">
-  <h1>404</h1>
-  <p>Oops... Page not found...</p>
-</div>
+<div style="display: block; font-size: 36px; font-weight: bold; margin: 15px; text-align: center">404! Oops... Page gone...</div>
+<div style="text-align: center; margin-bottom: 50px">Meanwhile, if you're not in a hurry, why not check out 
+    <a href="https://tl20212.cecs.anu.edu.au">our product?</a>
+<div>
+<br/>
+<div style="background-image: url('./images/404background.jpg'); min-height: 1080px" class="fof"></div>
